ajuste para projeto rodar

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,10 @@
                       <div class="output">
                         <img id="photo" class="form-control-file" name="photo" alt="The screen capture will appear in this box."> 
                       </div>
-                    
-                    </div>          
+                      <input type="text" value="teste" id="username">
                     <!--<input class="form-control-file" type="file" accept="image/*" name="photo" >-->
                     <input class="btn mt-3" type="submit" value="upload">
+                    </div>                              
                 </form>
             </div>            
         </div>
