--- a/public/teste.html
+++ b/public/teste.html
@@ -7,6 +7,7 @@
  *  tree.
 -->
 <html>
+
 <head>
 
     <meta charset="utf-8">
@@ -30,27 +31,21 @@
 
 <body>
 
-<div id="container">
+    <div id="container">
 
-    <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>getUserMedia ⇒ canvas</span>
-    </h1>
+        <video playsinline autoplay></video>
+        <button>Take snapshot</button>
+        <canvas></canvas>
 
-    <video playsinline autoplay></video>
-    <button>Take snapshot</button>
-    <canvas></canvas>
+        <div id="base64">
+            bloh
+        </div>
 
-    <p>Draw a frame from the video onto the canvas element using the <code>drawImage()</code> method.</p>
+    </div>
 
-    <p>The variables <code>canvas</code>, <code>video</code> and <code>stream</code> are in global scope, so you can
-        inspect them from the console.</p>
-
-    <a href="https://github.com/webrtc/samples/tree/gh-pages/src/content/getusermedia/canvas"
-       title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
-
-</div>
-
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="js/main.js" async></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="js/main.js" async></script>
 
 </body>
+
 </html>
